--- a/users/templates/users/profile_form.html
+++ b/users/templates/users/profile_form.html
@@ -20,7 +20,7 @@
                 </div>
                 {% endfor %}
 
-                <input class="btn btn--sub btn--lg  my-md" type="submit" value="Submit" />
+                <input class="btn btn--sub btn--lg  my-md" type="submit" value="Submit" style=" background-color: green" />
             </form>
         </div>
     </div>
