--- a/policies/templates/policies/policies.html
+++ b/policies/templates/policies/policies.html
@@ -1,5 +1,5 @@
-{% extends 'main.html' %}
-{% block content %}
+<!-- {% extends 'main.html' %}
+{% block content %} -->
 
 
 <!-- Main Section -->
@@ -64,4 +64,4 @@
 
 
 
-{% endblock %}
+<!-- {% endblock %} -->
