--- a/countries/templates/countries/countries.html
+++ b/countries/templates/countries/countries.html
@@ -5,84 +5,90 @@
 <main class="countries">
 
     <section class="hero-section text-center">
-        <div class="container container--narrow">
+        <div class="container--narrow">
             <div class="hero-section__box">
                 <h2>Search for <span>Countries</span></h2>
             </div>
 
             <div class="hero-section__search">
-                <form id='searchForm' class="form" action="{% url 'countries' %}" method="get">
-                    <div class="form__field">
-                        <label for="formInput#search">Search By Countries </label>
-                        <input class="input input--text" id="formInput#search" type="text" name="search_query"
-                            placeholder="Search by Country Name " value="{{search_query}}" />
-                    </div>
-
-                    <input class="btn btn--sub btn--lg" type="submit" value="Search" />
-                </form>
-                    
-                    <div class="is-divider small"></div><div class="country_selector_dropdown">
-                    <a href="#" class="country_selector_dropbtn"><span class="flag-icon flag-icon-un"></span> 
-                    Choose your country</a>
-                    <div class="country_selector_dropdown-content">
-                    {% for country in countries %}
-                    <a href="{% url 'country' country.code %}" data-country-code="{{ country.code}}">
-                    <span class="flag-icon flag-icon-{{ country.code | lower }}"> </span> {{ country.name }}</a>
-                    {% endfor %}
-                    </div>
+               
+                    <form id='searchForm' class="form" action="{% url 'countries' %}" method="get">
+                        <div class="form__field">
+                            <label for="formInput#search">Search By Countries </label>
+                            <input class="input input--text" id="formInput#search" type="text" name="search_query"
+                                placeholder="Search by Country Name or Code" value="{{search_query}}" />
+                        </div>
+    
+                        <input class="btn btn--sub btn--lg" type="submit" value="Search" />
+                    </form>
                     
             </div>
             
         </div>
+        <div class="country_selector_dropdown" style="float: right;">
+            <a href="#" class="country_selector_dropbtn"><span class="flag-icon flag-icon-un"></span> 
+            Choose your country</a>
+            <div class="country_selector_dropdown-content">
+            {% for country in countries %}
+            <a href="{% url 'country' country.name %}" data-country-code="{{ country.code}}">
+            <span class="flag-icon flag-icon-{{ country.code | lower }}"> </span> {{ country.name }}</a>
+            {% endfor %}
+            </div>
+        </div>
     </section>
 
     <!-- Search Result: countries -->
-    <section id="main" class="">
+    <section class="country-selector-col-sm-12" style="padding-bottom: 50px;">
+            {% for country in results %}
+            <div class="country-selector-col-sm-3 country_selector_country">
+            <a href="{% url 'country' country.code %}"><i class="mg map-{{ country.code |lower }}"></i><span class="flag-icon country_selector_page_flag flag-icon-{{ country.code |lower }} circle"></span>{{ country.name }}</a>
+            </div>
+            {% endfor %}
+           <div class="country-selector-col-sm-12"></div> 
+    </section>
+
+
+    <section id="countries" class="">
         <div  class="page-wrapper page-left-sidebar">
         <div class="row">
         <div id="content" class="large-9 right col" role="main">
         <div class="page-inner">
         <div id="country_selector_page" class="country_selector_page">
 
-            <ul id="tabs" class="country_selector_continents">
+            <div id="continents-selector" class="country_selector_continents">
 
-                <li class="country-selector-col-sm-2"><a id="tab1">
-                    <h2>Africa</h2>
-                    <i class="mg map-wrld-af"></i>
-                </a>
-                </li>
-                <li class="country-selector-col-sm-2"><a id="tab2"><h2>America</h2>
-                    <i class="mg map-wrld-am"></i></a></li>
-                    <li class="country-selector-col-sm-2"><a id="tab3"><h2>Asia</h2>
-                        <i class="mg map-wrld-as"></i></a></li>
-                        <li class="country-selector-col-sm-2"><a id="tab4"><h2>Europe</h2>
-                            <i class="mg map-wrld-eu"></i></a></li>
-                            <li class="country-selector-col-sm-2"><a id="tab5"><h2>Oceania</h2>
-                                <i class="mg map-wrld-oc"></i></a></li>
+                <div class="country-selector-col-sm-2"><a id="tab1"><h2>Africa</h2><i class="mg map-wrld-af"></i></a></div>
+                <div class="country-selector-col-sm-2"><a id="tab2"><h2>America</h2><i class="mg map-wrld-am"></i></a></div>
+                <div class="country-selector-col-sm-2"><a id="tab3"><h2>Asia</h2><i class="mg map-wrld-as"></i></a></div>
+                <div class="country-selector-col-sm-2"><a id="tab4"><h2>Europe</h2><i class="mg map-wrld-eu"></i></a></div>
+                <div class="country-selector-col-sm-2"><a id="tab5"><h2>Oceania</h2><i class="mg map-wrld-oc"></i></a></div>
+                
           
-          </ul>
+            </div>
               
           <!-- African countries -->
           <div class="container" id="tab1C">
-                        <div class="country-selector-col-sm-12"><h3>Africa</h3></div>
+            <div class="country-selector-col-sm-12"><h3>Africa</h3>
+            </div>
             {% for country in africa %}
             <div class="country-selector-col-sm-3 country_selector_country">
             <a href="{% url 'country' country.code %}"><i class="mg map-{{ country.code |lower }}"></i><span class="flag-icon country_selector_page_flag flag-icon-{{ country.code |lower }} circle"></span>{{ country.name }}</a>
             </div>
             {% endfor %}
-            </div> 
-            </div>
+          </div> 
+            
     
-    <!-- American countries -->
+         <!-- American countries -->
           <div class="container" id="tab2C">
-                        <div class="country-selector-col-sm-12"><h3>America</h3></div>
+                        <div class="country-selector-col-sm-12"><h3>America</h3>
+                        </div>
             {% for country in america %}
             <div class="country-selector-col-sm-3 country_selector_country">
             <a href="{% url 'country' country.code %}"><i class="mg map-{{ country.code |lower }}"></i><span class="flag-icon country_selector_page_flag flag-icon-{{ country.code |lower }} circle"></span>{{ country.name }}</a>
             </div>
             {% endfor %}
-            </div> 
-            </div>
+          </div> 
+            
     
             <!-- Asian countries -->
           <div class="container" id="tab3C">
@@ -93,19 +99,19 @@
             </div>
             {% endfor %}
             </div> 
-            </div>
+            
     
     
             <!-- Europe countries -->
           <div class="container" id="tab4C">
-                        <div class="country-selector-col-sm-12"><h3>Europe</h3></div>
+                        <div class="country-selector-col-sm-12"><h3>Europe</h3>
+                        </div>
             {% for country in europe %}
             <div class="country-selector-col-sm-3 country_selector_country">
             <a href="{% url 'country' country.code %}"><i class="mg map-{{ country.code |lower }}"></i><span class="flag-icon country_selector_page_flag flag-icon-{{ country.code |lower }} circle"></span>{{ country.name }}</a>
             </div>
             {% endfor %}
             </div> 
-            </div>
     
             <!-- Oceania countries -->
           <div class="container" id="tab5C">
@@ -116,15 +122,15 @@
             </div>
             {% endfor %}
             </div> 
-            </div>
+        </div>
+    </section>
+
     
 
-</section>
 
-<div>
 
-</div>
-<section class="container">
+
+ <!-- <section class="container">
         <div class="country-selector-row country_selector_countries_by_continent country_selector_countries_africa">
         <div class="country-selector-col-sm-12"><h3>Africa</h3></div>
         {% for country in countries %}
@@ -209,7 +215,7 @@
         </div>
         </div>
         </div>
-    </section>
+    </section> -->
 
     {% include 'pagination.html' with queryset=countries custom_range=custom_range %} 
 
