--- a/parties/templates/parties/parties.html
+++ b/parties/templates/parties/parties.html
@@ -1,5 +1,5 @@
-{% extends 'main.html' %}
-{% block content %}
+<!-- {% extends 'main.html' %}
+{% block content %} -->
 
 
 <!-- Main Section -->
@@ -67,4 +67,4 @@
 
 
 
-{% endblock %}
+<!-- {% endblock %} -->
