--- a/parties/templates/parties/single-party.html
+++ b/parties/templates/parties/single-party.html
@@ -7,9 +7,10 @@
     <div class="container">
         <div class="layout">
             <div class="column column--1of3">
-                <h3>{{ party.name }}</h3>
+                <h3>COUNTRY >> {{ party.country.name }}</h3>
                 <div class="singleParty__toolStack">
-                    {% for tag in party.ideologies.all %}
+                    {{ party.ideology }}
+                    {% for tag in party.tags.all %}
                     <span class="tag tag--pill tag--sub tag--lg">
                         <small>{{tag}}</small>
                     </span>
@@ -34,9 +35,9 @@
             </div>
             <div class="column column--2of3">
                 <img class="singleParty__preview" src="{{ party.imageURL }}" alt="portfolio thumbnail" />
-                <a href="{% url 'user-profile' party.owner.id  %}"
-                    class="singleParty__Candidate">{{party.owner.name}}</a>
-                <h2 class="singleParty__title">{{party.title}}</h2>
+               
+                    class="singleParty__Candidate">{{party.leader}}
+                <h2 class="singleParty__title">{{party.name}} || {{ party.country }}</h2>
                 <h3 class="singleParty__subtitle">About the Party</h3>
                 <div class="singleParty__info">
                     {{party.description}}
