fix api endpoints

--- a/projects/templates/projects/single-project.html
+++ b/projects/templates/projects/single-project.html
@@ -19,8 +19,7 @@
 
                 {% if project.source_link %}
                 <a class="singleProject__liveLink" href="{{project.source_link}}" target="_blank"><i
-                        class="im im-external-link"></i>Source
-                    Code
+                        class="im im-external-link"></i>Source  Code
                 </a>
                 {% endif %}
 
