--- a/users/templates/users/countries copy.html
+++ b/users/templates/users/countries copy.html
@@ -42,7 +42,7 @@
             
 <!-- Header logo -->
 <a href="{% url 'countries' %}" class="header__logo">
-    <img src="{% static 'images/logo.svg' %} " alt="Vox Missa Logo" />
+    <img src="{% static 'images/logo.jpeg' %} " alt="Vox Missa Logo" />
 </a>
           </div>
 
