--- a/countries/templates/countries/countries copy.html
+++ b/countries/templates/countries/countries copy.html
@@ -23,7 +23,7 @@
       <div class="header-inner flex-row container logo-left medium-logo-center" role="navigation">
       <!-- Header logo -->
       <a href="{% url 'countries' %}" class="header__logo">
-      <img src="{% static 'images/logo.svg' %} " alt="Vox Missa Logo" />
+      <img src="{% static 'images/logo.jpeg' %} " alt="Vox Missa Logo" />
       </a>
       </div>
       <!-- Right Elements -->
